Add testing configuration for developmnet purposes

--- a/src/Vulder.ReverseProxy/appsettings.json
+++ b/src/Vulder.ReverseProxy/appsettings.json
@@ -6,9 +6,44 @@
     }
   },
   "Yarp": {
-    "Routes": [
-    ],
+    "Routes": {
+      "timetableRoute": {
+        "ClusterId": "Timetable",
+        "Match": {
+          "Path": "/timetable/{**catch-all}"
+        }
+      },
+      "branchRoute": {
+        "ClusterId": "Timetable",
+        "Match": {
+          "Path": "/branch/{**catch-all}"
+        }
+      },
+      "schoolRoute": {
+        "ClusterId": "School",
+        "Match": {
+          "Path": "/school/{**catch-all}"
+        }
+      }
+    },
     "Clusters": {
+      "Timetable": {
+        "Destinations": {
+          "Timetable": {
+            "Address": "http://localhost:6000"
+          },
+          "Branch": {
+            "Address": "http://localhost:6000"
+          }
+        }
+      },
+      "School": {
+        "Destinations": {
+          "School": {
+            "Address": "http://localhost:6001"
+          }
+        }
+      }
     }
   },
   "AllowedHosts": "*"
