Add SchoolForm to yarp configuration

--- a/src/Vulder.ReverseProxy/appsettings.json
+++ b/src/Vulder.ReverseProxy/appsettings.json
@@ -24,6 +24,12 @@
         "Match": {
           "Path": "/school/{**catch-all}"
         }
+      },
+      "schoolFormRoute": {
+        "ClusterId": "SchoolForm",
+        "Match": {
+          "Path": "/form/{**catch-all}"
+        }
       }
     },
     "Clusters": {
@@ -41,6 +47,13 @@
         "Destinations": {
           "School": {
             "Address": "http://localhost:6001"
+          }
+        }
+      },
+      "SchoolForm": {
+        "Destinations": {
+          "SchoolForm": {
+            "Address": "http://localhost:6002"
           }
         }
       }
