Fix branchRoute path

--- a/src/Vulder.ReverseProxy/appsettings.json
+++ b/src/Vulder.ReverseProxy/appsettings.json
@@ -16,7 +16,7 @@
       "branchRoute": {
         "ClusterId": "Timetable",
         "Match": {
-          "Path": "/branch/{**catch-all}"
+          "Path": "/branches/{**catch-all}"
         }
       },
       "schoolRoute": {
